# copy-trade-bot

./: Cargo.toml  README.md
src/: blacklist.rs  clickhouse.rs  constants.rs  copy_trading.rs  diffs.rs  key_dispatcher.rs  lib.rs  main.rs  metadata.rs  metrics.rs  orderbook.rs  price.rs  process_swap.rs  sol_price.rs  util.rs
src/common/: config.rs  constants.rs  mod.rs  targetlist.rs
src/core/: cpi.rs  token.rs  tx.rs
src/engine/: monitor.rs
src/error/: mod.rs
src/handler/: token_swap_handler.rs
src/processor/: selling_strategy.rs  sniper_bot.rs  transaction_retry.rs
src/rpc/: instruction_pipeline.rs
src/services/: bloxroute.rs  jito.rs  nozomi.rs  zeroslot.rs
