[package]
name = "solana_vntr_pumpswap_copytrader"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = "0.30"
anchor-client = "0.30"
anyhow = "1"
bb8 = "0.8"
bb8-redis = { version = "0.15", features = ["tokio-comp"] }
bs58 = "0.5"
carbon-core = "0.11"
carbon-log-metrics = "0.11"
carbon-meteora-damm-v2-decoder = "0.11"
carbon-meteora-dlmm-decoder = "0.11"
carbon-meteora-pools-decoder = "0.11"
carbon-orca-whirlpool-decoder = "0.11"
carbon-pump-swap-decoder = "0.11"
carbon-pumpfun-decoder = "0.11"
carbon-raydium-amm-v4-decoder = "0.11"
carbon-raydium-clmm-decoder = "0.11"
carbon-raydium-cpmm-decoder = "0.11"
carbon-raydium-launchpad-decoder = "0.11"
carbon-yellowstone-grpc-datasource = "0.11"
carbon-rpc-transaction-crawler-datasource = "0.11"
carbon-token-2022-decoder = "0.11"
carbon-token-program-decoder = "0.11"
chrono = { version = "0.4", features = ["serde"] }
clickhouse = "0.11"
colored = "2"
dashmap = "5"
dotenv = "0.15"
futures-util = "0.3"
lazy_static = "1.4"
once_cell = "1.19"
ordered-float = "3"
redis = { version = "0.23", features = ["tokio-comp"] }
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
spl-associated-token-account = "2"
spl-token = "4"
spl-token-2022 = "1"
spl-token-client = "0.6"
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "macros", "uuid"] }
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

solana-client = "1.18"
solana-sdk = "1.18"
solana-transaction-status = "1.18"
solana-account-decoder = "1.18"
solana-program = "1.18"
yellowstone-grpc-proto = "1"
yellowstone-grpc-client = "1"

serde_with = "3"
